tests/good/syntax/060-case-7.clap
val x = 
  case { Some at { Some int + None } [ x ] => 42 }

