tests/bad/lexical/065-case-11.clap
val x = 
  case { not 42 => x }
 
